# python-rabbit-producer-consumer

./: .gitignore  README.md  pyproject.toml
rabbit_producer_consumer/: consumer.py  producer.py
setup/: docker-compose.yaml
setup/ssl2/: ca-cert.pem  ca_key.pem  client-cert.pem  client-key.pem  client.conf  client.csr  server-cert.pem  server-key.pem  server.conf  server.csr
