[tool.poetry]
name = "rabbit-producer-consumer"
version = "0.1.0"
description = ""
authors = ["Daniel Paulino <daniel.paulino@csgi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pika = "1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
